--- a/tex/references.bib
+++ b/tex/references.bib
@@ -98,5 +98,17 @@
   title     = {Predicting Level of Game Play (Chess) Using Transformers},
   year      = {2025},
   note      = {Unpublished manuscript. Available as local file: \url{Supplement1.pdf}},
+}
+
+@article{silver2018general,
+  title   = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
+  author  = {Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and others},
+  journal = {Science},
+  volume  = {362},
+  number  = {6419},
+  pages   = {1140--1144},
+  year    = {2018},
+  publisher={American Association for the Advancement of Science}
+}
   file      = {:../data/reports/Supplement1.pdf:PDF}
 }
