--- a/tex/research_paper.tex
+++ b/tex/research_paper.tex
@@ -114,6 +114,7 @@ The ultimate goal is to move beyond simple blunder identification and develop a 
 
 % bibliography (BibTeX)
 {
+    \clearpage
     \bibliographystyle{plain}
     \bibliography{references}
     \nocite{*}
