--- a/tex/references.bib
+++ b/tex/references.bib
@@ -100,6 +100,21 @@
   note      = {Unpublished manuscript. Available as local file: \url{Supplement1.pdf}},
 }
 
+@article{IncrementalPCA2019,
+   abstract = {This paper describes some applications of an incremental implementation of the principal component analysis (PCA). The algorithm updates the transformation coefficients matrix on-line for each new sample, without the need to keep all the samples in memory. The algorithm is formally equivalent to the usual batch version, in the sense that given a sample set the transformation coefficients at the end of the process are the same. The implications of applying the PCA in real time are discussed with the help of data analysis examples. In particular we focus on the problem of the continuity of the PCs during an on-line analysis.},
+   author = {Vittorio Lippi and Giacomo Ceccarelli},
+   doi = {10.5220/0007743604730480},
+   isbn = {9789897583803},
+   journal = {ICINCO 2019 - Proceedings of the 16th International Conference on Informatics in Control, Automation and Robotics},
+   keywords = {Dimensionality reduction,Incremental,On-line,PCA},
+   pages = {473-480},
+   publisher = {SciTePress},
+   title = {Incremental principal component analysis: Exact implementation and continuity corrections},
+   volume = {1},
+   year = {2019}
+}
+
+
 @article{silver2018general,
   title   = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
   author  = {Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and others},
